--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 <%= stylesheet_link_tag "default" %>
 </head>
 <body>
-<div id="doc4" class="yui-t7">
+<div id="doc2" class="yui-t7">
 <div id="hd">
   <%= link_to_unless_current "dMeSH: digitize MeSH", root_url %>
 </div><!-- #hd -->
@@ -16,7 +16,7 @@
 <%= yield %>
 </div><!-- #bd -->
 <div id="ft">
-  <%= link_to("Source Code", "http://github.com/seouri/dmesh", :target => "_blank") %>
+  <%= link_to("Source Code", "http://github.com/seouri/dmesh", :target => "_blank") %> |
   <%= link_to("Issue Tracker", "http://github.com/seouri/dmesh/issues", :target => "_blank") %>
 </div><!-- #ft -->
 </div><!-- #doc4 -->
