--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @book.title %> [<%= @book.pages.size %> pages]</h1>
+<h1><%= @book.title %>: <%= pluralize(@book.pages.size, 'page') %></h1>
 
 <ul class="pages" id="pages">
 <% for page in @book.pages -%>
