--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
+<h1>Books</h1>
 <ul class="books" id="books">
 <% @books.each do |book| -%>
-  <li class="book" id="<%= dom_id(book) %>"><%=link_to "#{book.title} [#{book.pages_count}]", book_url(book.title) %></li>
+  <li class="book" id="<%= dom_id(book) %>"><%=link_to "<div class=\"book_title\">#{book.title}</div><div class=\"pages_count\">#{book.pages_count} pages</div><div class=\"lines_count\">#{book.lines_count} lines</div></li>", book_url(book.title) %>
 <% end -%>
 </ul>
