--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -119,7 +119,7 @@
 }
 
 input[disabled="disabled"]#line_term_string, input[disabled="disabled"]#line_tree_number {
-  border: 1px solid #ccc;
+  border: 1px solid #fff;
 }
 
 #new_line_tree_number {
@@ -127,6 +127,7 @@ input[disabled="disabled"]#line_term_string, input[disabled="disabled"]#line_tre
   width: 24.5em;
   border: 1px solid #333;
 }
+
 #line_tree_number {
   border: 1px solid #fff;
   width: 99%;
