--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/reset-fonts-grids/reset-fonts-grids.css&2.8.0r4/build/base/base-min.css">
 <%= stylesheet_link_tag "default" %>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
+<%= javascript_include_tag "jquery.autocomplete.pack" %>
+<% if controller.controller_name == "pages" and controller.action_name == "show" %>
+<script type="text/javascript">
+$(document).ready(function() {
+    $("input#line_term_string").autocomplete("auto_complete_for_term_string", {
+      minChars: 2,
+      max: 20
+    })
+  });
+</script>
+<% end %>
 </head>
 <body>
 <div id="doc2" class="yui-t7">
