--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -9,7 +9,7 @@
     <li id="<%= dom_id(line) %>" class="line"><span class="term" id="<%= dom_id(line.term) %>"><span class="level<%= line.level %>"></span><%= line.term.string %></span><span class="tree_number" id="<%= dom_id(line) + "_tree_number" %>"><%= line.tree_number %></span><%= radio_button_tag 'parent_line', line.id, false, :disabled => @page.is_done? %></li>
   <% end %>
 <% f.fields_for :term do |t| %>
-    <li id="new_line" class="line"><span class="term" id="new_term"><%= t.text_field :string, :disabled => @page.is_done? %></span>
+    <li id="new_line" class="line"><span class="term" id="new_term"><%= t.text_field :string, :disabled => @page.is_done?, :autocomplete =>"off" %></span>
   <% end %>
   <span class="tree_number" id="new_line_tree_number"><%= f.text_field :tree_number, :disabled => @page.is_done? %></span>
   <%= submit_tag 'add', :disabled => @page.is_done? %></li>
