--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@ $(document).ready(function() {
       minChars: 2,
       max: 20
     })
+    $("input#line_term_string").focus()
   });
 </script>
 <% end %>
